6.33
    Bug Fixes
    - Properly not installing MANIFEST.SKIP when ExtUtils::Manifest is not
      being installed. [rt.cpan.org 21318]
    - fixin() no longer clobbers $/ [rt.cpan.org 26234]

    Windows
    - Embed manifest files in EXEs and DLLs when building with VC++ 8.x
      [bleadperl #29266] [rt.cpan.org 26208]

    VMS
    - Use linker flags rather than compiler flags to determine if the
      perl sharable image was linked debug.  This keeps OPTIMIZE from
      confusing things. [rt.cpan.org 25268]

    Doc Improvements
    - Typo fixes.  $(TOUNIX) -> $(TO_UNIX).  [rt.cpan.org 23495]
    - The example for setting $VERSION from $Revision$ in SVN was
      incorrect. (Thanks to ROBERTMAY@cpan.org) [rt.cpan.org 26995]

    Misc
    - Provide information during the install about whether we're using the
      installed or provided dependency (ie. ExtUtils::Command).
    - Updated included versions of ExtUtils::Manifest and Command.

6.32  Wed Feb 21 07:59:57 PST 2007
    New Features
    - WriteEmptyMakefile() is now exportable upon request.
    
    Bug Fixes
    - Set binmode() when writing to files in Command.t for operating
      systems which need that sort of thing.  [bleadperl #29578]
    - Fixed a minor duplication in manifypod_target().  [rt.cpan.org 22149]

    Test Fixes
    - The build_man.t test would fail if your Perl is configured to not
      generate man pages ($Config{installman3dir} is set to none).

    Doc Improvements
    - Made the home dir install examples a little more friendly to non-Unix
      folks.

    Misc
    - miniperl no longer has the Win32 functions.
    - Turn on "use strict" where it was missing.

6.31  Mon Oct  9 16:54:47 PDT 2006
    - Update our META.yml to version 1.2 of the spec.
    * Update the SEE ALSO to mention Module::Build, Module::Install,
      ExtUtils::ModuleMaker and Module::Starter.
    - Fix ARCHITECTURE tag in PPD generation for 5.8 (patch taken from
      ActiveState 819). [rt.cpan.org 20566]