@@ -46,6 +46,7 @@ t/backwards.t
 t/basic.t
 t/build_man.t
 t/bytes.t
+t/cd.t
 t/config.t
 t/dir_target.t
 t/FIRST_MAKEFILE.t
